# TrackVideo

./: CMakeLists.txt  ComputerVersionConfig.h  basic.h  ffmpeg_tools.cpp  ffmpeg_tools.h  image_draw.cpp  image_draw.h  main.cpp  main_window.cpp  main_window.h  object_marker.cpp  object_marker.h  position_file.cpp  position_file.h  trackVideo.qrc  video_file_dst  video_file_recorder.cpp  video_file_recorder.h  video_file_source.cpp  video_file_source.h  video_file_transcoder.cpp  video_file_transcoder.h  video_filter.h  video_frame.h  video_player.cpp  video_player.h  video_receiver.h  video_render_window.cpp  video_render_window.h  video_sender.cpp  video_sender.h  video_slider.cpp  video_slider.h  video_source.h  video_track.cpp  video_track.h  video_utils.cpp
ffmpeg/: config.h  ffmpeg.c  ffmpeg_opt.c
ffmpeg/libavcodec/: libavcodec.pc
ffmpeg/libavdevice/: libavdevice.pc
ffmpeg/libavfilter/: libavfilter.pc
ffmpeg/libavformat/: libavformat.pc
ffmpeg/libavresample/: audio_convert.d  audio_data.d  audio_mix.d  audio_mix_matrix.d  dither.d  libavresample.pc  options.d  resample.d  utils.d
ffmpeg/libavutil/: libavutil.pc
ffmpeg/libpostproc/: libpostproc.pc
ffmpeg/libswresample/: libswresample.pc
ffmpeg/libswscale/: libswscale.pc
matlab/: .gitignore  FH_show2.m  FH_test.m  ccc.m  endMarkObject.p  feedFrame.p  libTrack.cpp  libTrack.exports  libTrack.h  markObject.p  matlab cmd
matlab/tracker/: .gitignore
matlab/video/1475141139413_img/: .gitignore
ui/: .gitignore  currentobjectchangedcallback.h  objectinfodetailpanel.cpp  objectinfodetailpanel.h  objectinfolist.cpp  objectinfolist.h  objectlistitemdelegate.cpp  objectlistitemdelegate.h  onimageselectedcallback.h  qdetailtablemodel.cpp  qdetailtablemodel.h  snapshoter.h  snapshotwidget.cpp  snapshotwidget.h  stylecombobox.cpp  stylecombobox.h
